[lib]
crate-type = ["cdylib", "rlib"]

[package]
authors = ["ru-lai <ru.lai.development@gmail.com>"]
edition = "2018"
name = "rust-text-adventure"
version = "0.1.0"

[dependencies]
lazy_static = "0.1.*"
phf = { features = ["macros"], path="../rust-phf/phf" }
serde = "1"
serde_derive = "1"
wasm-bindgen = "^0.2"
yew = "0.7"
